# BitFun

./: Cargo.toml  README.md  README.zh-CN.md  pnpm-lock.yaml
BitFun-Installer/src/data/: modelProviders.ts
BitFun-Installer/src/i18n/locales/: en.json  zh.json
MiniApp/Demo/git-graph/: README.md
MiniApp/Skills/miniapp-dev/: SKILL.md  architecture.md
src/apps/cli/src/agent/: agentic_system.rs
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/desktop/scripts/: post-install-icons.sh
src/apps/desktop/src/: lib.rs  logging.rs
src/apps/desktop/src/api/: agentic_api.rs  app_state.rs  commands.rs  config_api.rs  image_analysis_api.rs  system_api.rs  tool_api.rs
src/apps/desktop/src/computer_use/: desktop_host.rs  linux_ax_ui.rs  macos_ax_ui.rs  mod.rs  ui_locate_common.rs  windows_ax_ui.rs
src/apps/server/src/: bootstrap.rs  rpc_dispatcher.rs
src/crates/core/: Cargo.toml
src/mobile-web/src/i18n/: messages.ts
src/mobile-web/src/styles/components/: sessions.scss
src/web-ui/: package.json
src/web-ui/src/: main.tsx
src/web-ui/src/app/components/: index.ts
src/web-ui/src/app/hooks/: useDialogCompletionNotify.ts  useSceneManager.ts
src/web-ui/src/app/layout/: AppLayout.tsx  FloatingMiniChat.tsx  WorkspaceBody.scss  WorkspaceBody.tsx
src/web-ui/src/app/scenes/: SceneViewport.scss  SceneViewport.tsx  nav-registry.ts  registry.ts
src/web-ui/src/app/stores/: sceneStore.ts
src/web-ui/src/app/types/: index.ts
src/web-ui/src/component-library/components/: registry.tsx
src/web-ui/src/flow_chat/components/: ChatInput.scss  ChatInput.tsx  ModelSelector.tsx  WelcomePanel.css  WelcomePanel.tsx
src/web-ui/src/flow_chat/hooks/: useMessageSender.ts
src/web-ui/src/flow_chat/services/: BtwThreadService.ts  FlowChatManager.ts
src/web-ui/src/flow_chat/store/: FlowChatStore.ts
src/web-ui/src/flow_chat/tool-cards/: GitToolDisplay.scss  GitToolDisplay.tsx  ImageAnalysisCard.tsx  MiniAppToolDisplay.tsx  TerminalControlDisplay.tsx  TerminalToolCard.tsx  TodoWriteDisplay.scss  TodoWriteDisplay.tsx  index.ts
tests/e2e/: package.json
tests/e2e/specs/: l1-mermaid-export.spec.ts  l1-navigation.spec.ts
(+208 files in other folders)
